tests/baselines/reference/duplicateIdentifierRelatedSpans1.errors.txt
[91m● [0m[96mfile1.ts[0m:[93m1[0m:[93m7[0m  [91mError[0m TS2300
| class Foo { }
  [91m      ▔▔▔[0m
Duplicate identifier 'Foo'.

'Foo' was also declared here: [96mfile2.ts[0m:[93m1[0m:[93m6[0m

  | type Foo = number;
    [96m     ▔▔▔[0mand here: [96mfile3.ts[0m:[93m1[0m:[93m6[0m

  | type Foo = 54;
    [96m     ▔▔▔[0m[91m● [0m[96mfile1.ts[0m:[93m2[0m:[93m7[0m  [91mError[0m TS2451
| const Bar = 3;
  [91m      ▔▔▔[0m
Cannot redeclare block-scoped variable 'Bar'.

'Bar' was also declared here: [96mfile2.ts[0m:[93m2[0m:[93m7[0m

  | class Bar {}
    [96m      ▔▔▔[0mand here: [96mfile3.ts[0m:[93m2[0m:[93m5[0m

  | let Bar = 42
    [96m    ▔▔▔[0m[91m● [0m[96mfile2.ts[0m:[93m1[0m:[93m6[0m  [91mError[0m TS2300
| type Foo = number;
  [91m     ▔▔▔[0m
Duplicate identifier 'Foo'.

'Foo' was also declared here: [96mfile1.ts[0m:[93m1[0m:[93m7[0m

  | class Foo { }
    [96m      ▔▔▔[0m[91m● [0m[96mfile2.ts[0m:[93m2[0m:[93m7[0m  [91mError[0m TS2451
| class Bar {}
  [91m      ▔▔▔[0m
Cannot redeclare block-scoped variable 'Bar'.

'Bar' was also declared here: [96mfile1.ts[0m:[93m2[0m:[93m7[0m

  | const Bar = 3;
    [96m      ▔▔▔[0m[91m● [0m[96mfile3.ts[0m:[93m1[0m:[93m6[0m  [91mError[0m TS2300
| type Foo = 54;
  [91m     ▔▔▔[0m
Duplicate identifier 'Foo'.

'Foo' was also declared here: [96mfile1.ts[0m:[93m1[0m:[93m7[0m

  | class Foo { }
    [96m      ▔▔▔[0m[91m● [0m[96mfile3.ts[0m:[93m2[0m:[93m5[0m  [91mError[0m TS2451
| let Bar = 42
  [91m    ▔▔▔[0m
Cannot redeclare block-scoped variable 'Bar'.

'Bar' was also declared here: [96mfile1.ts[0m:[93m2[0m:[93m7[0m

  | const Bar = 3;
    [96m      ▔▔▔[0m

==== file1.ts (2 errors) ====
    class Foo { }
          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
!!! related TS6203 file2.ts:1:6: 'Foo' was also declared here:
!!! related TS6204 file3.ts:1:6: and here:
    const Bar = 3;
          ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Bar'.
!!! related TS6203 file2.ts:2:7: 'Bar' was also declared here:
!!! related TS6204 file3.ts:2:5: and here:
==== file2.ts (2 errors) ====
    type Foo = number;
         ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
!!! related TS6203 file1.ts:1:7: 'Foo' was also declared here:
    class Bar {}
          ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Bar'.
!!! related TS6203 file1.ts:2:7: 'Bar' was also declared here:
==== file3.ts (2 errors) ====
    type Foo = 54;
         ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
!!! related TS6203 file1.ts:1:7: 'Foo' was also declared here:
    let Bar = 42
        ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Bar'.
!!! related TS6203 file1.ts:2:7: 'Bar' was also declared here:
    
Found 6 errors in 3 files.

Errors  Files
     2  file1.ts[90m:1[0m
     2  file2.ts[90m:1[0m
     2  file3.ts[90m:1[0m
